--- a/KinectToMidi/Properties/Resources.resx
+++ b/KinectToMidi/Properties/Resources.resx
@@ -255,4 +255,7 @@
   <data name="ZColon" xml:space="preserve">
     <value>Z:</value>
   </data>
+  <data name="ErrorMessage_CannotOpenFile" xml:space="preserve">
+    <value>Cannot open selected file.</value>
+  </data>
 </root>
